frontend: containers, wip login page, input

--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -5,11 +5,13 @@
 	--font-features: 'cv05', 'cv08';
 
 	--fs-mn: 0%;
+	--fs-xxs: 0.50rem;
 	--fs-xs: 0.75rem;
 	--fs-sm: 0.8rem;
 	--fs-md: 0.9rem;
 	--fs-lg: 1.05rem;
 	--fs-xl: 1.1rem;
+	--fs-xxl: 1.35rem;
 	--fs-mx: 100%;
 
 	--br-mn: 0px;
