--- a/frontend/src/lib/font/inter.scss
+++ b/frontend/src/lib/font/inter.scss
@@ -3,124 +3,124 @@
 	font-style: normal;
 	font-weight: 100;
 	font-display: swap;
-	src: url('./fonts/inter/Inter_18pt-Thin.ttf');
+	src: url('/fonts/inter/Inter_18pt-Thin.ttf');
 }
 @font-face {
 	font-family: 'Inter';
 	font-style: italic;
 	font-weight: 100;
 	font-display: swap;
-	src: url('./fonts/inter/Inter_18pt-ThinItalic.ttf');
+	src: url('/fonts/inter/Inter_18pt-ThinItalic.ttf');
 }
 @font-face {
 	font-family: 'Inter';
 	font-style: normal;
 	font-weight: 200;
 	font-display: swap;
-	src: url('./fonts/inter/Inter_18pt-ExtraLight.ttf');
+	src: url('/fonts/inter/Inter_18pt-ExtraLight.ttf');
 }
 @font-face {
 	font-family: 'Inter';
 	font-style: italic;
 	font-weight: 200;
 	font-display: swap;
-	src: url('./fonts/inter/Inter_18pt-ExtraLightItalic.ttf');
+	src: url('/fonts/inter/Inter_18pt-ExtraLightItalic.ttf');
 }
 @font-face {
 	font-family: 'Inter';
 	font-style: normal;
 	font-weight: 300;
 	font-display: swap;
-	src: url('./fonts/inter/Inter_18pt-Light.ttf');
+	src: url('/fonts/inter/Inter_18pt-Light.ttf');
 }
 @font-face {
 	font-family: 'Inter';
 	font-style: italic;
 	font-weight: 300;
 	font-display: swap;
-	src: url('./fonts/inter/Inter_18pt-LightItalic.ttf');
+	src: url('/fonts/inter/Inter_18pt-LightItalic.ttf');
 }
 @font-face {
 	font-family: 'Inter';
 	font-style: normal;
 	font-weight: 400;
 	font-display: swap;
-	src: url('./fonts/inter/Inter_18pt-Regular.ttf');
+	src: url('/fonts/inter/Inter_18pt-Regular.ttf');
 }
 @font-face {
 	font-family: 'Inter';
 	font-style: italic;
 	font-weight: 400;
 	font-display: swap;
-	src: url('./fonts/inter/Inter_18pt-Italic.ttf');
+	src: url('/fonts/inter/Inter_18pt-Italic.ttf');
 }
 @font-face {
 	font-family: 'Inter';
 	font-style: normal;
 	font-weight: 500;
 	font-display: swap;
-	src: url('./fonts/inter/Inter_18pt-Medium.ttf');
+	src: url('/fonts/inter/Inter_18pt-Medium.ttf');
 }
 @font-face {
 	font-family: 'Inter';
 	font-style: italic;
 	font-weight: 500;
 	font-display: swap;
-	src: url('./fonts/inter/Inter_18pt-MediumItalic.ttf');
+	src: url('/fonts/inter/Inter_18pt-MediumItalic.ttf');
 }
 @font-face {
 	font-family: 'Inter';
 	font-style: normal;
 	font-weight: 600;
 	font-display: swap;
-	src: url('./fonts/inter/Inter_18pt-SemiBold.ttf');
+	src: url('/fonts/inter/Inter_18pt-SemiBold.ttf');
 }
 @font-face {
 	font-family: 'Inter';
 	font-style: italic;
 	font-weight: 600;
 	font-display: swap;
-	src: url('./fonts/inter/Inter_18pt-SemiBoldItalic.ttf');
+	src: url('/fonts/inter/Inter_18pt-SemiBoldItalic.ttf');
 }
 @font-face {
 	font-family: 'Inter';
 	font-style: normal;
 	font-weight: 700;
 	font-display: swap;
-	src: url('./fonts/inter/Inter_18pt-Bold.ttf');
+	src: url('/fonts/inter/Inter_18pt-Bold.ttf');
 }
 @font-face {
 	font-family: 'Inter';
 	font-style: italic;
 	font-weight: 700;
 	font-display: swap;
-	src: url('./fonts/inter/Inter_18pt-BoldItalic.ttf');
+	src: url('/fonts/inter/Inter_18pt-BoldItalic.ttf');
 }
 @font-face {
 	font-family: 'Inter';
 	font-style: normal;
 	font-weight: 800;
 	font-display: swap;
-	src: url('./fonts/inter/Inter_18pt-ExtraBold.ttf');
+	src: url('/fonts/inter/Inter_18pt-ExtraBold.ttf');
 }
 @font-face {
 	font-family: 'Inter';
 	font-style: italic;
 	font-weight: 800;
 	font-display: swap;
-	src: url('./fonts/inter/Inter_18pt-ExtraBoldItalic.ttf');
+	src: url('/fonts/inter/Inter_18pt-ExtraBoldItalic.ttf');
 }
 @font-face {
 	font-family: 'Inter';
 	font-style: normal;
 	font-weight: 900;
 	font-display: swap;
-	src: url('./fonts/inter/Inter_18pt-Black.ttf');
+	src: url('/fonts/inter/Inter_18pt-Black.ttf');
 }
 @font-face {
 	font-family: 'Inter';
 	font-style: italic;
 	font-weight: 900;
 	font-display: swap;
-	src: url('./fonts/inter/Inter_18pt-BlackItalic.ttf');
+	src: url('/fonts/inter/Inter_18pt-BlackItalic.ttf');
 }
