--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -42,6 +42,8 @@
 	--tx-1: #f3efff;
 	--tx-2: #d8cdf1;
 	--tx-3: #9688bd;
+
+	--ac-1: #8e6bed;
 }
 
 html {
@@ -62,4 +64,46 @@ body {
 	box-sizing: border-box;
 
 	margin: 0;
+}
+
+.button,
+.input {
+	display: flex;
+	align-items: center;
+
+	padding: 8px 10px;
+
+	color: var(--tx-2);
+	background-color: var(--bg-3);
+
+	box-shadow: var(--funky-effect);
+	border-radius: var(--br-md);
+	border: 1px solid transparent;
+
+	font-family: var(--font);
+	font-feature-settings: var(--font-features);
+	font-size: var(--fs-md);
+
+	text-decoration: none;
+
+	transition:
+		0.1s,
+		width 0s,
+		height 0s,
+		border 0s,
+		outline 0s,
+		outline-offset 0s;
+
+	&:focus-visible {
+		outline: 2px solid var(--ac-1);
+		outline-offset: 1px;
+		border: 1px solid var(--ac-1);
+	}
+
+	&:disabled {
+		cursor: not-allowed;
+
+		color: var(--tx-3);
+		opacity: 75%;
+	}
 }
