frontend: react query, note page, improve usage with screen readers

--- a/frontend/src/lib/components/Info.scss
+++ b/frontend/src/lib/components/Info.scss
@@ -32,6 +32,12 @@
 		background-color: var(--danger-50);
 	}
 
+	&.text {
+		box-shadow: none;
+		background: transparent;
+		padding: 0;
+	}
+
 	gap: 6px;
 
 	.icon {
