--- a/frontend/src/lib/components/Container.scss
+++ b/frontend/src/lib/components/Container.scss
@@ -1,6 +1,7 @@
 .container {
 	display: flex;
 	flex-direction: column;
+	box-sizing: border-box;
 
 	&.center {
 		width: 100%;
@@ -18,6 +19,14 @@
 		width: 100%;
 		align-items: flex-end;
 		justify-content: center;
+	}
+
+	&.horizontal {
+		flex-direction: row;
+
+		width: 100%;
+		align-items: center;
+		justify-content: normal;
 	}
 
 	&.sm {
