--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -9,7 +9,7 @@
 	--fs-xs: 0.75rem;
 	--fs-sm: 0.8rem;
 	--fs-md: 0.9rem;
-	--fs-lg: 1.05rem;
+	--fs-lg: 1rem;
 	--fs-xl: 1.1rem;
 	--fs-xxl: 1.35rem;
 	--fs-mx: 100%;
@@ -38,6 +38,11 @@
 	--bg-2: #1a1423;
 	--bg-3: #261e37;
 	--bg-4: #3f325a;
+
+	--bg-1-50: #140e1b50;
+	--bg-2-50: #1a142350;
+	--bg-3-50: #261e3750;
+	--bg-4-50: #3f325a50;
 
 	--tx-1: #f3efff;
 	--tx-2: #d8cdf1;
@@ -73,7 +78,21 @@ body {
 	width: 100vw;
 	box-sizing: border-box;
 
+	font-family: var(--font);
+	font-feature-settings: var(--font-features);
+	font-size: var(--fs-md);
+
 	margin: 0;
+}
+
+a {
+	color: var(--ac-1);
+	text-decoration: underline;
+	text-decoration-color: var(--ac-1-50);
+
+	&:hover {
+		text-decoration-color: var(--ac-1);
+	}
 }
 
 .button,
@@ -88,7 +107,7 @@ body {
 
 	box-shadow: var(--funky-effect);
 	border-radius: var(--br-md);
-	border: 1px solid transparent;
+	border: none;
 
 	font-family: var(--font);
 	font-feature-settings: var(--font-features);
@@ -100,22 +119,28 @@ body {
 		0.1s,
 		width 0s,
 		height 0s,
+		border 0s;
+}
+
+.input,
+.button,
+.highlightable {
+	transition:
+		0.1s,
 		border 0s,
 		outline 0s,
 		outline-offset 0s;
-
-	&:focus-visible {
-		border: 1px solid var(--ac-1);
-
-		outline: 2px solid var(--ac-1-50);
-		outline-offset: 1px;
-	}
 
 	&:disabled {
 		cursor: not-allowed;
 
 		color: var(--tx-3);
 		opacity: 75%;
+	}
+
+	&:focus-visible {
+		outline: 2px solid var(--ac-1-50);
+		outline-offset: 1px;
 	}
 }
 
@@ -128,7 +153,7 @@ button.dismiss {
 	background-color: transparent;
 
 	border-radius: var(--br-md);
-	border: 1px solid transparent;
+	border: none;
 
 	transition:
 		0.1s,
