add a buunch of stuff to frontend, tabs, timeline and all that

--- a/frontend/src/lib/components/PageWrapper.scss
+++ b/frontend/src/lib/components/PageWrapper.scss
@@ -1,32 +1,36 @@
 .pageWrapper {
-	display: flex;
-	flex-direction: column;
+  display: flex;
+  flex-direction: column;
 
-	&.center {
-		justify-content: center;
-		align-items: center;
-	}
+  &.center {
+    justify-content: center;
+    align-items: center;
+  }
 
-	width: 100vw;
-	height: calc(100vh - 50px);
-	box-sizing: border-box;
+  width: 100vw;
+  height: calc(100vh - 50px);
+  box-sizing: border-box;
 
-	max-width: 725px;
+  max-width: 725px;
 
-	background-color: var(--bg-2);
-	border-radius: var(--br-lg) var(--br-lg) 0 0;
+  background-color: var(--bg-2);
+  border-radius: var(--br-lg) var(--br-lg) 0 0;
 
-	overflow: hidden;
+  overflow: hidden;
+  overflow-y: scroll;
 
-	&.none {
-		padding: 0;
-	}
+  scrollbar-width: thin;
+  scrollbar-color: var(--bg-3) var(--bg-2);
 
-	&.timeline {
-		padding: 8px;
-	}
+  &.none {
+    padding: 0;
+  }
 
-	&.full {
-		padding: 12px;
-	}
+  &.timeline {
+    padding: 8px;
+  }
+
+  &.full {
+    padding: 12px;
+  }
 }
