--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -70,18 +70,21 @@ html {
 }
 
 body {
-  display: flex;
-  justify-content: center;
-
-  height: 100vh;
-  width: 100vw;
-  box-sizing: border-box;
+  margin: 0;
 
   font-family: var(--font);
   font-feature-settings: var(--font-features);
   font-size: var(--fs-md);
+}
 
-  margin: 0;
+#root {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  height: 100vh;
+  width: 100vw;
+  box-sizing: border-box;
 }
 
 a {
