--- a/frontend/src/lib/components/Sidebar.scss
+++ b/frontend/src/lib/components/Sidebar.scss
@@ -1,17 +1,20 @@
 .sidebar {
   display: flex;
+  flex-direction: column;
 
   height: 100%;
   box-sizing: border-box;
   max-width: 300px;
-  min-width: 200px;
+  min-width: 245px;
   width: 100%;
 
   padding-top: 50px;
+  padding-bottom: 10px;
   gap: 10px;
 
   .widget {
     width: 100%;
+    box-sizing: border-box;
 
     &.padded {
       padding: 0 10px;
