--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -103,6 +103,7 @@ a {
   align-items: center;
 
   padding: 8px 10px;
+  box-sizing: border-box;
 
   color: var(--tx-2);
   background-color: var(--bg-3);
