--- a/frontend/src/lib/components/Note.scss
+++ b/frontend/src/lib/components/Note.scss
@@ -39,8 +39,62 @@
     background-color: var(--warn-50);
     border-radius: var(--br-md);
     padding: 6px 12px;
-    
+
     box-shadow: var(--funky-effect);
+  }
+
+  .tag {
+    color: var(--ac-1);
+    background-color: var(--ac-1-25);
+    border-radius: var(--br-sm);
+    padding: 2px 6px;
+
+    transition: .1s;
+
+    &.gay, &.lgbt, &.lgbtq {
+      color: var(--tx-2);
+      background: linear-gradient(90deg,
+              #ff666650, #ff8f5350, #ffdf5e50,
+              #8ce45850, #5aa2ff50, #a861ff50);
+    }
+
+    &.trans {
+      color: var(--tx-2);
+      background: linear-gradient(90deg,
+              rgba(102, 237, 255, 0.31), rgba(248, 146, 255, 0.31), rgba(255, 255, 255, 0.31),
+              rgba(248, 146, 255, 0.31), rgba(102, 237, 255, 0.31));
+    }
+
+    &.mlm {
+      color: var(--tx-2);
+      background: linear-gradient(90deg,
+              rgba(39, 170, 124, 0.31), rgba(147, 255, 201, 0.31), rgba(255, 255, 255, 0.31),
+              rgba(71, 146, 186, 0.31), rgba(45, 73, 216, 0.31));
+    }
+
+    &.wlw {
+      color: var(--tx-2);
+      background: linear-gradient(90deg,
+              rgba(237, 76, 19, 0.31), rgba(255, 150, 101, 0.31), rgba(255, 255, 255, 0.31),
+              rgba(250, 128, 200, 0.31), rgba(213, 57, 150, 0.31));
+    }
+
+    &.enby, &.nonbinary {
+      color: var(--tx-2);
+      background: linear-gradient(90deg,
+              rgba(255, 228, 97, 0.31), rgba(255, 255, 255, 0.31), rgba(181, 82, 246, 0.31),
+              rgba(0, 0, 0, 0.31));
+    }
+
+    > * {
+      color: inherit;
+      text-decoration: none;
+    }
+
+    &:hover {
+      color: var(--tx-2);
+      background-color: var(--ac-1-50);
+    }
   }
 
   footer {
