not good start on a user page design

--- a/frontend/src/lib/components/Avatar.scss
+++ b/frontend/src/lib/components/Avatar.scss
@@ -9,6 +9,12 @@
 
   overflow: hidden;
 
+  &.xl {
+    height: 55px;
+    width: 55px;
+    border-radius: var(--br-lg);
+  }
+
   &.lg {
     height: 50px;
     width: 50px;
