fix font sizes, hideRemoteContent config option

--- a/frontend/src/lib/components/page/UserPage.scss
+++ b/frontend/src/lib/components/page/UserPage.scss
@@ -26,7 +26,17 @@
   }
 
   .username {
-    font-size: var(--fs-lg);
     font-weight: 400;
+  }
+
+  .underHeader {
+    margin: 16px 0 16px 0;
+
+    .bio {
+      &.none {
+        color: var(--tx-3);
+        font-style: italic;
+      }
+    }
   }
 }
