--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -4,15 +4,13 @@
   --font: 'Inter', 'Arial', sans-serif;
   --font-features: 'cv05', 'cv08';
 
-  --fs-mn: 0%;
-  --fs-xxs: 0.50rem;
-  --fs-xs: 0.75rem;
-  --fs-sm: 0.8rem;
-  --fs-md: 0.9rem;
-  --fs-lg: 1rem;
-  --fs-xl: 1.1rem;
-  --fs-xxl: 1.35rem;
-  --fs-mx: 100%;
+  --fs-xxs: 8px;
+  --fs-xs: 10px;
+  --fs-sm: 12px;
+  --fs-md: 14px;
+  --fs-lg: 16px;
+  --fs-xl: 18px;
+  --fs-xxl: 20px;
 
   --br-mn: 0px;
   --br-xxs: 2px;
