--- a/frontend/packages/app/src/main.scss
+++ b/frontend/packages/app/src/main.scss
@@ -51,12 +51,16 @@
 
   --success: #38b84d;
   --success-50: #38b84d50;
+  --success-25: #38b84d25;
+
 
   --warn: #e39244;
   --warn-50: #e3924450;
+  --warn-25: #e3924425;
 
   --danger: #e65448;
   --danger-50: #e6544850;
+  --danger-25: #e6544825;
 
   --repeat: #53d167;
   --like: #ecbd51;
