--- a/src/main/resources/admin/index.css
+++ b/src/main/resources/admin/index.css
@@ -54,3 +54,59 @@ body {
         flex-direction: column;
     }
 }
+
+header {
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+
+    .inner {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+
+        width: 100%;
+        max-width: 725px;
+        padding: 12px 16px;
+
+        background-color: var(--bg-1);
+        box-shadow: 0 0 10px var(--bg-1);
+
+        span {
+            font-weight: bold;
+            margin-right: 8px;
+        }
+
+        a {
+            display: flex;
+            align-items: center;
+            gap: 4px;
+
+            padding: 10px 12px;
+            border-radius: var(--br-md);
+
+            color: var(--tx-2);
+            text-decoration: none;
+
+            &:hover, &.selected {
+                color: var(--tx-2);
+                background-color: var(--bg-2);
+            }
+        }
+    }
+}
+
+main {
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+
+    .inner {
+        width: 100%;
+        max-width: 725px;
+        padding: 12px 16px;
+
+        border-radius: var(--br-lg) var(--br-lg) 0 0;
+        background-color: var(--bg-2);
+    }
+}
