--- a/src/main/resources/admin/index.css
+++ b/src/main/resources/admin/index.css
@@ -11,6 +11,11 @@
     --bg-3: #261e37;
     --bg-4: #3f325a;
 
+    --bg-1-50: #140e1b50;
+    --bg-2-50: #1a142350;
+    --bg-3-50: #261e3750;
+    --bg-4-50: #3f325a50;
+
     --tx-1: #f3efff;
     --tx-2: #d8cdf1;
     --tx-3: #9688bd;
@@ -27,6 +32,16 @@
 
     --danger: #e65448;
     --danger-50: #e6544850;
+
+    --br-mn: 0px;
+    --br-xxs: 2px;
+    --br-xs: 4px;
+    --br-sm: 6px;
+    --br-md: 10px;
+    --br-lg: 12px;
+    --br-xl: 14px;
+    --br-xxl: 18px;
+    --br-mx: 99999px;
 }
 
 html {
@@ -58,6 +73,7 @@ body {
 header {
     display: flex;
     justify-content: center;
+    height: 50px;
     width: 100vw;
 
     .inner {
@@ -67,6 +83,7 @@ header {
 
         width: 100%;
         max-width: 725px;
+        box-sizing: border-box;
         padding: 12px 16px;
 
         background-color: var(--bg-1);
@@ -102,11 +119,31 @@ main {
     width: 100vw;
 
     .inner {
-        width: 100%;
         max-width: 725px;
         padding: 12px 16px;
 
+        width: 100%;
+        height: calc(100vh - 50px);
+        box-sizing: border-box;
+
         border-radius: var(--br-lg) var(--br-lg) 0 0;
         background-color: var(--bg-2);
+    }
+}
+
+table {
+    border-spacing: 0;
+    border-collapse: collapse;
+    width: 100%;
+
+    th, td {
+        width: 50%;
+        text-align: left;
+        border: 1px solid var(--bg-3);
+        padding: 6px;
+    }
+
+    tr:nth-child(2n) {
+        background-color: var(--bg-3-50);
     }
 }
