--- a/frontend/packages/app/src/lib/components/Note.scss
+++ b/frontend/packages/app/src/lib/components/Note.scss
@@ -16,6 +16,11 @@
     background-color: var(--bg-3-50);
   }
 
+  .repeatHeader {
+    margin-left: calc(12px);
+    color: var(--tx-3);
+  }
+
   p {
     margin: 0;
   }
