add danger style to button

--- a/frontend/packages/app/src/lib/components/Button.scss
+++ b/frontend/packages/app/src/lib/components/Button.scss
@@ -43,4 +43,9 @@
       box-shadow: var(--funky-effect);
     }
   }
+
+  &.danger {
+    color: var(--danger);
+    background: var(--danger-50);
+  }
 }
