add action to repeat button in frontend

--- a/frontend/packages/app/src/lib/components/Container.scss
+++ b/frontend/packages/app/src/lib/components/Container.scss
@@ -29,6 +29,13 @@
     justify-content: normal;
   }
 
+  &.horizontalCenter {
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    width: 100%;
+  }
+
   &.gap-sm {
     gap: 4px;
   }
